tests/switch_bad_subject_type.stderr
tests/switch_bad_subject_type.sl:4:8: error: SL2004: type mismatch
