tests/switch_bad_subject_type.sl
fn f(x i32) i32 {
	switch x {
		case true { return 0 }
		default   { return 1 }
	}
}
